--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de IMC</title>
 
-    <link rel="stylesheet" href="/assets/css/principal.css">
+    <link rel="stylesheet" href="assets/css/principal.css">
 
     <script defer src="assets/js/script.js"></script>
 
